// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin dashboard page Renders Manage role Page 1`] = `
<div
  className="w-full overflow-hidden h-full grow flex flex-col"
>
  <div
    className="flex flex-col grow bg-light-bg dark:bg-dark-frame-bg overflow-hidden px-4"
  >
    <div
      className="flex flex-row pb-8 justify-center"
    >
      <div
        className="lg:ml-44 w-[90%] pt-[4vh] lg:pt-[6vh]"
      >
        <div
          className="grid grid-cols-2 lg:grid-cols-4 px-4"
        >
          <div
            className=" bg-gray-300 py-4 dark:bg-gray-600 md:w-[70%] h-24 md:h-28 mx-2 md:ml-16 lg:ml-10 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
          />
          <div
            className=" bg-gray-300 py-4 dark:bg-gray-600 md:w-[70%] h-24 md:h-28 mx-2 md:ml-16 lg:ml-10 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
          />
          <div
            className=" bg-gray-300 py-4 dark:bg-gray-600 md:w-[70%] h-24 md:h-28 mx-2 md:ml-16 lg:ml-10 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
          />
          <div
            className=" bg-gray-300 py-4 dark:bg-gray-600 md:w-[70%] h-24 md:h-28 mx-2 md:ml-16 lg:ml-10 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
          />
        </div>
      </div>
    </div>
    <div
      className="items-center px-4 "
    >
      <div
        className="w-[100%] h-[46vh] lg:h-[62vh] pb-14 lg:w-[84%] mx-auto lg:ml-52 lg:mr-2  mt-8 bottom-0 bg-gray-300 dark:bg-gray-600 rounded-lg animate-pulse"
      />
    </div>
  </div>
</div>
`;

exports[`Admin dashboard page Renders Session Page 1`] = `
Array [
  <div
    className="h-screen w-screen bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-full sm:w-3/4 md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm text-gray-700 text-center w-11/12 uppercase"
        >
          AddSession
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary rounded outline-none px-5 font-sans dark:bg-dark-frame-bg dark:text-white text-xs py-2 w-full"
                name="name"
                placeholder="SessionName"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className=" border border-primary py-2 rounded outline-none px-5 dark:bg-dark-frame-bg dark:text-white font-sans text-xs w-full"
                name="name"
                placeholder="Description"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 rounded dark:bg-dark-frame-bg dark:text-white outline-none px-5 font-sans text-xs w-full"
                name="name"
                placeholder="Platform"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="name"
                placeholder="Duration"
                type="time"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className=" border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="name"
                placeholder="Organizer"
                type="text"
              />
            </div>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="remove"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
               
              Cancel
               
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
              disabled={false}
              type="button"
            >
               
              Save
               
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="min-h-full w-screen z-30 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-full sm:w-3/4 md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm text-gray-700 dark:text-white text-center w-11/12"
        >
          DeleteSession
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div>
            <h2
              className="text-base dark:text-white text-center m-4"
            >
              reallydeleteSession
            </h2>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="delete"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
               
              Cancel
               
            </button>
            <button
              className="btn danger sm w-[30%] md:w-1/4 text-sm font-sans"
              disabled={false}
              type="button"
            >
               
              Delete
               
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="min-h-full w-screen z-30 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-full sm:w-3/4 md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm text-gray-700 dark:text-white text-center w-11/12"
        >
          UpdateSession
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary rounded outline-none dark:bg-dark-frame-bg dark:text-white px-5 font-sans text-xs py-2 w-full"
                defaultValue="demo"
                name="name"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className=" border border-primary py-2 rounded dark:bg-dark-frame-bg dark:text-white outline-none px-5 font-sans text-xs w-full"
                defaultValue="Jointime"
                name="desc"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 rounded dark:bg-dark-frame-bg dark:text-white outline-none px-5 font-sans text-xs w-full"
                defaultValue="Zoom"
                name="place"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 rounded outline-none dark:bg-dark-frame-bg dark:text-white px-5 font-sans text-xs w-full"
                defaultValue="11am-12am"
                name="duration"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 rounded outline-none px-5 dark:bg-dark-frame-bg dark:text-white font-sans text-xs w-full"
                defaultValue="John deo"
                name="organizer"
                type="text"
              />
            </div>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
               
              Cancel
               
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
              disabled={false}
              type="button"
            >
               
              Save
               
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="flex flex-col h-screen"
  >
    <div
      className="flex flex-row"
    >
      <div
        className="hidden lg:flex flex-col fixed h-[100%] pt-[3vh] lg:pt-[11vh] bg-white dark:bg-dark-bg border-r p-2"
      >
        <div
          className="list-none pr-8"
        >
          <li
            className="mb-4 hover:text-primary transition-all group-hover:transition-all"
          >
            <a
              className="flex flex-row dark:text-dark-text-fill"
              href="/dashboard/"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="w-5 mr-2 "
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"
                />
                <path
                  d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"
                />
              </svg>
              <span
                className="text-base "
              >
                Dashboard
              </span>
            </a>
          </li>
          <li
            className="mb-4 hover:text-primary transition-all group-hover:transition-all"
          >
            <a
              className="flex flex-row dark:text-dark-text-fill"
              href="/dashboard/notifications"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="w-5 mr-2"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
                />
              </svg>
              <span
                className="text-base "
              >
                Notifications
              </span>
            </a>
          </li>
          <li
            className="mb-4 hover:text-primary transition-all group-hover:transition-all"
          >
            <a
              className="flex flex-row dark:text-dark-text-fill"
              href="/dashboard/calendar"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="w-5 mr-2"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
                  fillRule="evenodd"
                />
              </svg>
              <span
                className="text-base "
              >
                Calendar
              </span>
            </a>
          </li>
          <li
            className="mb-4 hover:text-primary transition-all group-hover:transition-all"
          >
            <a
              className="flex flex-row dark:text-dark-text-fill"
              href="/dashboard/docs"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="w-5 mr-2 "
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 6a2 2 0 012-2h5l2 2h5a2 2 0 012 2v6a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"
                />
              </svg>
              <span
                className="text-base "
              >
                Docs
              </span>
            </a>
          </li>
          <li
            className="mb-4 hover:text-primary transition-all group-hover:transition-all"
          >
            <a
              className="flex flex-row dark:text-dark-text-fill"
              href="/dashboard/support"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="w-5 mr-2 "
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-2 0c0 .993-.241 1.929-.668 2.754l-1.524-1.525a3.997 3.997 0 00.078-2.183l1.562-1.562C15.802 8.249 16 9.1 16 10zm-5.165 3.913l1.58 1.58A5.98 5.98 0 0110 16a5.976 5.976 0 01-2.516-.552l1.562-1.562a4.006 4.006 0 001.789.027zm-4.677-2.796a4.002 4.002 0 01-.041-2.08l-.08.08-1.53-1.533A5.98 5.98 0 004 10c0 .954.223 1.856.619 2.657l1.54-1.54zm1.088-6.45A5.974 5.974 0 0110 4c.954 0 1.856.223 2.657.619l-1.54 1.54a4.002 4.002 0 00-2.346.033L7.246 4.668zM12 10a2 2 0 11-4 0 2 2 0 014 0z"
                  fillRule="evenodd"
                />
              </svg>
              <span
                className="text-base "
              >
                Help
              </span>
            </a>
          </li>
          <div
            className="flex flex-row ml-10 mt-auto list-none"
          >
            <li
              className="px-2"
            >
              <a
                aria-current="page"
                className="active"
                href="/#link"
                onClick={[Function]}
              >
                <div
                  className="relative flex flex-col items-center group"
                >
                  <svg
                    aria-hidden="true"
                    className="w-5 text-red-700 dark:text-red-600 hover:text-red-900"
                    fill="currentColor"
                    viewBox="0 0 20 20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M3 3a1 1 0 00-1 1v12a1 1 0 102 0V4a1 1 0 00-1-1zm10.293 9.293a1 1 0 001.414 1.414l3-3a1 1 0 000-1.414l-3-3a1 1 0 10-1.414 1.414L14.586 9H7a1 1 0 100 2h7.586l-1.293 1.293z"
                      fillRule="evenodd"
                    />
                  </svg>
                  <div
                    className="absolute bottom-0 hidden flex-col items-center mb-6 group-hover:flex"
                  >
                    <span
                      className="relative z-10 p-2 text-xs leading-none text-white whitespace-no-wrap bg-gray-600 shadow-lg rounded-md"
                    >
                      Logout
                    </span>
                    <div
                      className="w-3 h-3 -mt-2 rotate-45 bg-gray-600"
                    />
                  </div>
                </div>
              </a>
            </li>
            <li
              className="px-2"
            >
              <a
                className="flex flex-row dark:text-dark-text-fill"
                href="/dashboard/settings"
                onClick={[Function]}
              >
                <div
                  className="relative flex flex-col items-center group"
                >
                  <svg
                    aria-hidden="true"
                    className="w-5 hover:text-primary "
                    fill="none"
                    onClick={[Function]}
                    stroke="currentColor"
                    strokeWidth={2}
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                  <div
                    className="absolute bottom-0 hidden flex-col items-center mb-6 group-hover:flex"
                  >
                    <span
                      className="relative z-10 p-2 text-xs leading-none text-white whitespace-no-wrap bg-gray-600 shadow-lg rounded-md"
                    >
                      Settings
                    </span>
                    <div
                      className="w-3 h-3 -mt-2 rotate-45 bg-gray-600"
                    />
                  </div>
                </div>
              </a>
            </li>
          </div>
        </div>
      </div>
      <div
        className="w-full"
      >
        <div>
          <div
            className="bg-light-bg dark:bg-dark-frame-bg  min-h-screen overflow-y-auto overflow-x-hidden"
          >
            <div
              className="flex items-left px-10 lg:px-60 pt-24 pb-8"
            >
              <div
                className="space-x-8 lg:ml-7"
              >
                <button
                  className="btn primary lg undefined"
                  data-testid="registerModel"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                   
                  register
                   +
                   
                </button>
              </div>
            </div>
            <div
              className="px-3 md:px-8"
            >
              <div
                className="bg-white dark:bg-dark-bg shadow-lg px-5 py-8 rounded-md w-[100%] mx-auto lg:w-[80%] lg:ml-60 mb-10"
              >
                <div
                  className=" flex items-center justify-between pb-6"
                >
                  <div>
                    <h2
                      className="text-gray-800 dark:text-white font-semibold text-xl"
                    >
                      Developers list
                    </h2>
                    <input
                      className="border-gray-300 dark:bg-dark-tertiary dark:text-white border py-2 mt-4 rounded outline-none px-5 font-sans text-xs w-52 md:w-96"
                      defaultValue=""
                      onChange={[Function]}
                      placeholder="Filter"
                    />
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "overflowX": "auto",
                    }
                  }
                >
                  <table
                    className="min-w-full leading-normal"
                    role="table"
                  >
                    <thead>
                      <tr
                        role="row"
                      >
                        <th
                          className=" thead"
                          colSpan={1}
                          onClick={[Function]}
                          role="columnheader"
                          style={
                            Object {
                              "cursor": "pointer",
                            }
                          }
                          title="Toggle SortBy"
                        >
                          Session
                        </th>
                        <th
                          className=" thead"
                          colSpan={1}
                          onClick={[Function]}
                          role="columnheader"
                          style={
                            Object {
                              "cursor": "pointer",
                            }
                          }
                          title="Toggle SortBy"
                        >
                          Description
                        </th>
                        <th
                          className=" thead"
                          colSpan={1}
                          onClick={[Function]}
                          role="columnheader"
                          style={
                            Object {
                              "cursor": "pointer",
                            }
                          }
                          title="Toggle SortBy"
                        >
                          Platform
                        </th>
                        <th
                          className=" thead"
                          colSpan={1}
                          onClick={[Function]}
                          role="columnheader"
                          style={
                            Object {
                              "cursor": "pointer",
                            }
                          }
                          title="Toggle SortBy"
                        >
                          Duration
                        </th>
                        <th
                          className=" thead"
                          colSpan={1}
                          onClick={[Function]}
                          role="columnheader"
                          style={
                            Object {
                              "cursor": "pointer",
                            }
                          }
                          title="Toggle SortBy"
                        >
                          Organizer
                        </th>
                        <th
                          className=" thead"
                          colSpan={1}
                          onClick={[Function]}
                          role="columnheader"
                          style={
                            Object {
                              "cursor": "pointer",
                            }
                          }
                          title="Toggle SortBy"
                        >
                          Action
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      role="rowgroup"
                    >
                      <tr
                        className=" bg-white dark:bg-dark-bg} "
                        role="row"
                      >
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          Demo
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          Join on time
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          Zoom
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          11am - 12am
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          John deo
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          <span />
                        </td>
                      </tr>
                      <tr
                        className=" bg-light-bg dark:bg-dark-tertiary} "
                        role="row"
                      >
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          Stand up
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          Join on time
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          Zoom
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          11am - 12am
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          John deo
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          <span />
                        </td>
                      </tr>
                      <tr
                        className=" bg-white dark:bg-dark-bg} "
                        role="row"
                      >
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          E-level up
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          Join on time
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          Zoom
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          11am - 12am
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          John deo
                        </td>
                        <td
                          className="data-cell"
                          role="cell"
                        >
                          <span />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                  <div>
                    <table
                      className="w-full mt-2"
                    >
                      <tfoot
                        className="w-full py-2"
                      >
                        <tr
                          className="w-full py-2"
                        >
                          <td
                            colSpan={6}
                          >
                            <div
                              className="w-full justify-center flex mx-auto flex-row items-center overflow-x-auto"
                            >
                              <button
                                className="page mx-2 text-white rounded-circle appearance-none font-bold flex items-center justify-center bg-primary h-[30px] w-[60px] cursor-pointer"
                                disabled={true}
                                onClick={[Function]}
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="w-5"
                                  fill="none"
                                  fontSize="sm"
                                  stroke="currentColor"
                                  strokeWidth={2}
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M11 15l-3-3m0 0l3-3m-3 3h8M3 12a9 9 0 1118 0 9 9 0 01-18 0z"
                                    strokeLinecap="round"
                                    strokeLinejoin="round"
                                  />
                                </svg>
                              </button>
                               
                              <button
                                className="page mx-2 text-white rounded-circle font-bold flex items-center justify-center bg-primary h-[30px] w-[60px] cursor-pointer"
                                disabled={false}
                                onClick={[Function]}
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="w-5"
                                  fill="none"
                                  fontSize="sm"
                                  stroke="currentColor"
                                  strokeWidth={2}
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"
                                    strokeLinecap="round"
                                    strokeLinejoin="round"
                                  />
                                </svg>
                              </button>
                               
                              <div
                                className="flex flex-row justify-center w-full sm:text-[12px] items-center "
                              >
                                <span
                                  className="inline-block mx-2"
                                >
                                  Page
                                   
                                  <strong>
                                    1
                                     of
                                     2
                                  </strong>
                                   
                                </span>
                                <span
                                  className="inline-block mx-2"
                                >
                                  | Go to page:
                                   
                                  <input
                                    className=" outline-none border rounded-md appearance-none border-primary dark:bg-primary pl-1"
                                    defaultValue={1}
                                    onChange={[Function]}
                                    style={
                                      Object {
                                        "border": "solid 0.1rem #4aa5be",
                                        "height": "30px",
                                        "paddingLeft": "1.2rem",
                                        "width": "50px",
                                      }
                                    }
                                    type="number"
                                  />
                                </span>
                                 
                                <select
                                  className="px-1/2 font-raleway rounded-md border border-primary dark:bg-primary"
                                  onChange={[Function]}
                                  style={
                                    Object {
                                      "border": "solid 0.1rem #4aa5be",
                                      "height": "30px",
                                    }
                                  }
                                  value={3}
                                >
                                  <option
                                    value={3}
                                  >
                                    Show 
                                    3
                                  </option>
                                  <option
                                    value={5}
                                  >
                                    Show 
                                    5
                                  </option>
                                  <option
                                    value={10}
                                  >
                                    Show 
                                    10
                                  </option>
                                  <option
                                    value={25}
                                  >
                                    Show 
                                    25
                                  </option>
                                  <option
                                    value={50}
                                  >
                                    Show 
                                    50
                                  </option>
                                  <option
                                    value={100}
                                  >
                                    Show 
                                    100
                                  </option>
                                </select>
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tfoot>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Admin dashboard page Renders cohort Page 1`] = `
Array [
  <div
    className="h-screen w-screen bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-screen md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm dark:text-white text-center w-11/12 uppercase"
        >
          Add Cohort
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div
            className="input my-5 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary rounded outline-none px-5 dark:bg-dark-frame-bg dark:text-white font-sans text-xs py-2 w-full"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="name"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-5 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="phase"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Phase"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-5 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <div
                className="my-react-select-container css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className="my-react-select__control css-6zplfg-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className="my-react-select__value-container css-319lph-ValueContainer"
                  >
                    <div
                      className="my-react-select__placeholder css-14el2xx-placeholder"
                      id="react-select-2-placeholder"
                    >
                      Select Coordinator
                    </div>
                    <div
                      className="my-react-select__input-container css-6j8wv5-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby="react-select-2-placeholder"
                        aria-expanded={false}
                        aria-haspopup={true}
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        className="my-react-select__input"
                        disabled={false}
                        id="react-select-2-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        role="combobox"
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "color": "inherit",
                            "font": "inherit",
                            "gridArea": "1 / 2",
                            "label": "input",
                            "margin": 0,
                            "minWidth": "2px",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "100%",
                          }
                        }
                        tabIndex={0}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="my-react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className="my-react-select__indicator-separator css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className="my-react-select__indicator my-react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="input my-5 h-9 "
          >
            <div
              className="my-react-select-container css-b62m3t-container"
              onKeyDown={[Function]}
            >
              <span
                className="css-1f43avz-a11yText-A11yText"
                id="react-select-3-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="css-1f43avz-a11yText-A11yText"
              />
              <div
                className="my-react-select__control css-6zplfg-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="my-react-select__value-container css-319lph-ValueContainer"
                >
                  <div
                    className="my-react-select__placeholder css-14el2xx-placeholder"
                    id="react-select-3-placeholder"
                  >
                    Program Name
                  </div>
                  <div
                    className="my-react-select__input-container css-6j8wv5-Input"
                    data-value=""
                  >
                    <input
                      aria-autocomplete="list"
                      aria-describedby="react-select-3-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      className="my-react-select__input"
                      disabled={false}
                      id="react-select-3-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      spellCheck="false"
                      style={
                        Object {
                          "background": 0,
                          "border": 0,
                          "color": "inherit",
                          "font": "inherit",
                          "gridArea": "1 / 2",
                          "label": "input",
                          "margin": 0,
                          "minWidth": "2px",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "100%",
                        }
                      }
                      tabIndex={0}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="my-react-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className="my-react-select__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className="my-react-select__indicator my-react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-tj5bde-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="input my-5 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="startDate"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="StartingDate"
                type="date"
              />
            </div>
          </div>
          <div
            className="input my-5 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className=" border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="endDate"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="ClosingDate"
                type="date"
              />
            </div>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="remove"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
               
              Cancel
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans p-0"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
               
              Save
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="h-screen w-screen bg-black fixed bg-opacity-30 backdrop-blur-sm flex items-center justify-center z-50 overflow-auto mt-10 p-4 hidden"
    data-testid="updateCohortModal"
  >
    <div
      className="bg-white dark:bg-dark-bg w-screen md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm dark:text-white text-center w-11/12 uppercase"
        >
          Update Cohort
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div
            className="input my-5 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary rounded outline-none px-5 dark:bg-dark-frame-bg dark:text-white font-sans text-xs py-2 w-full"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="name"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-5 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="phase"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Phase"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-5 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="startDate"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="StartingDate"
                type="date"
              />
            </div>
          </div>
          <div
            className="input my-5 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className=" border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="endDate"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="ClosingDate"
                type="date"
              />
            </div>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="remove"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
               
              Cancel
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans p-0"
              data-testid="confirmUpdateBtn"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
               
              Save
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="h-screen w-screen bg-black fixed bg-opacity-30 backdrop-blur-sm flex items-center justify-center z-50 overflow-auto mt-10 p-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg shadow-lg px-5 py-8 rounded-md w-[100%] mx-auto lg:w-[60%]"
    >
      <div
        className=" flex items-center justify-between pb-6"
      >
        <div>
          <h2
            className="text-gray-800 dark:text-white font-semibold text-xl"
          >
            Trainees list
          </h2>
          <input
            className="border-gray-300 dark:bg-dark-tertiary dark:text-white border py-2 mt-4 rounded outline-none px-5 font-sans text-xs w-52 md:w-96"
            defaultValue=""
            onChange={[Function]}
            placeholder="Filter"
          />
        </div>
        <div
          style={
            Object {
              "color": "red",
              "marginTop": "-1.2cm",
            }
          }
        >
          <button
            className="btn  sxm "
            data-testid="delete"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            x
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "overflowX": "auto",
          }
        }
      >
        <table
          className="min-w-full leading-normal"
          role="table"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                className=" thead"
                colSpan={1}
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
                title="Toggle SortBy"
              >
                Name
              </th>
              <th
                className=" thead"
                colSpan={1}
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
                title="Toggle SortBy"
              >
                Email
              </th>
              <th
                className=" thead"
                colSpan={1}
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
                title="Toggle SortBy"
              >
                Rating
              </th>
              <th
                className=" thead"
                colSpan={1}
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
                title="Toggle SortBy"
              >
                Cohort
              </th>
              <th
                className=" thead"
                colSpan={1}
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
                title="Toggle SortBy"
              >
                Program
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              className=" bg-white dark:bg-dark-bg} "
              role="row"
            >
              <td
                className="data-cell"
                role="cell"
              />
              <td
                className="data-cell"
                role="cell"
              />
              <td
                className="data-cell"
                role="cell"
              />
              <td
                className="data-cell"
                role="cell"
              />
              <td
                className="data-cell"
                role="cell"
              />
            </tr>
          </tbody>
        </table>
        <div>
          <table
            className="w-full mt-2"
          >
            <tfoot
              className="w-full py-2"
            >
              <tr
                className="w-full py-2"
              >
                <td
                  colSpan={5}
                >
                  <div
                    className="w-full justify-center flex mx-auto flex-row items-center overflow-x-auto"
                  >
                    <button
                      className="page mx-2 text-white rounded-circle appearance-none font-bold flex items-center justify-center bg-primary h-[30px] w-[60px] cursor-pointer"
                      disabled={true}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        className="w-5"
                        fill="none"
                        fontSize="sm"
                        stroke="currentColor"
                        strokeWidth={2}
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 15l-3-3m0 0l3-3m-3 3h8M3 12a9 9 0 1118 0 9 9 0 01-18 0z"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                      </svg>
                    </button>
                     
                    <button
                      className="page mx-2 text-white rounded-circle font-bold flex items-center justify-center bg-primary h-[30px] w-[60px] cursor-pointer"
                      disabled={true}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        className="w-5"
                        fill="none"
                        fontSize="sm"
                        stroke="currentColor"
                        strokeWidth={2}
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                      </svg>
                    </button>
                     
                    <div
                      className="flex flex-row justify-center w-full sm:text-[12px] items-center "
                    >
                      <span
                        className="inline-block mx-2"
                      >
                        Page
                         
                        <strong>
                          1
                           of
                           1
                        </strong>
                         
                      </span>
                      <span
                        className="inline-block mx-2"
                      >
                        | Go to page:
                         
                        <input
                          className=" outline-none border rounded-md appearance-none border-primary dark:bg-primary pl-1"
                          defaultValue={1}
                          onChange={[Function]}
                          style={
                            Object {
                              "border": "solid 0.1rem #4aa5be",
                              "height": "30px",
                              "paddingLeft": "1.2rem",
                              "width": "50px",
                            }
                          }
                          type="number"
                        />
                      </span>
                       
                      <select
                        className="px-1/2 font-raleway rounded-md border border-primary dark:bg-primary"
                        onChange={[Function]}
                        style={
                          Object {
                            "border": "solid 0.1rem #4aa5be",
                            "height": "30px",
                          }
                        }
                        value={3}
                      >
                        <option
                          value={3}
                        >
                          Show 
                          3
                        </option>
                        <option
                          value={5}
                        >
                          Show 
                          5
                        </option>
                        <option
                          value={10}
                        >
                          Show 
                          10
                        </option>
                        <option
                          value={25}
                        >
                          Show 
                          25
                        </option>
                        <option
                          value={50}
                        >
                          Show 
                          50
                        </option>
                        <option
                          value={100}
                        >
                          Show 
                          100
                        </option>
                      </select>
                    </div>
                  </div>
                </td>
              </tr>
            </tfoot>
          </table>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="h-screen w-screen bg-black fixed bg-opacity-30 backdrop-blur-sm flex items-center justify-center z-50 overflow-auto mt-10 p-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-screen md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-xl dark:text-white text-center w-11/12"
        >
          Delete Cohort
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div>
            <h2
              className="text-base dark:text-white text-center m-4"
            >
              reallyRemoveCohort
            </h2>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="delete"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="btn danger sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="confirmDeleteBtn"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Delete
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="bg-light-bg dark:bg-dark-frame-bg min-h-screen"
  >
    <div
      className="flex items-left px-7 lg:px-60 pt-24 pb-8"
    >
      <div
        className="space-x-8 lg:ml-10"
      >
        <button
          className="btn primary lg undefined"
          data-testid="removeModel"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
           
          Cohort
           +
        </button>
      </div>
    </div>
    <div
      className="px-3 m d:px-8 w-screen overflow-x-auto"
    />
  </div>,
]
`;
